--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,9 +35,21 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY } 
+        - { path: ^/(tvshow|category|character)/*, roles: ROLE_USER } # Pour afficher les pages Tvshow/category/character il faut être connecté
+        # - { path: ^/(tvshow|category|character)/*, roles: PUBLIC_ACCESS } # cette regle est ignorer car elle est en second
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
+
+    role_hierarchy:
+        # Un admin peut faire tout ce que peut faire un utilisateur connecté
+        ROLE_ADMIN:       ROLE_USER
+        # Un Super admin pourra faire tout ce que peut faire un admin 
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
+
 
 when@test:
     security:
