--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,7 +37,7 @@ security:
     access_control:
         - { path: ^/(tvshow|category|character)/*, roles: ROLE_USER } # Pour afficher les pages Tvshow/category/character il faut être connecté
         # - { path: ^/(tvshow|category|character)/*, roles: PUBLIC_ACCESS } # cette regle est ignorer car elle est en second
-        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api, roles: PUBLIC_ACCESS }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
