feat : LexikJWTAuthenticationBundle {mise en place de LexikJWT}

--- a/.env
+++ b/.env
@@ -31,3 +31,8 @@ APP_SECRET=b96d050e70353f010ebf949ebfb19627
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 UPLOAD_FOLDER=uploads/images
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=3a1867d534f8abb99042dcc0c31f6f27
+###< lexik/jwt-authentication-bundle ###
