--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,10 +13,26 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+
     firewalls:
+
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path:      /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
+        
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        
         main:
             lazy: true
             provider: app_user_provider
@@ -36,8 +52,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/(tvshow|category|character)/*, roles: ROLE_USER } # Pour afficher les pages Tvshow/category/character il faut être connecté
-        # - { path: ^/(tvshow|category|character)/*, roles: PUBLIC_ACCESS } # cette regle est ignorer car elle est en second
-        - { path: ^/api, roles: PUBLIC_ACCESS }
+        - { path: ^/(tvshow|category|character)/*, roles: PUBLIC_ACCESS } # cette regle est ignorer car elle est en second
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
