doc: Route de l' API

--- a/.env
+++ b/.env
@@ -34,5 +34,5 @@ UPLOAD_FOLDER=uploads/images
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=3a1867d534f8abb99042dcc0c31f6f27
+JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
